# hamware

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  clone.sh
plugins/: hamlib.c
src/: config.h  configuration.c  configuration.h  daemonize.c  daemonize.h  hamware_config.h  http.c  http.h  jsonrpc.c  jsonrpc.h  main.c  plugin_register.h  plugins.c  plugins.h
